# HEATER_v1.0.0

./: .dockerignore  .gitattributes  .gitignore  .test_durations  AVIS_FANTASY_BASEBALL_OPS_MANUAL_2026.md  Bugs_June26.md  CLAUDE.md  CLAUDE_ADDENDUM.md  Dockerfile  Enhanced_Trade_Evaluation_Engine_.md  Full_Debug_Plan.md  HEATER Design_Audit_Claude.md  HEATER_Product_Review.md  LEAGUE_ROSTERS_2026_OPENING_DAY.md  LICENSE  Outstanding_June26.md  PROMPT.md  README.md  REPORT.md  Research.md  The_Last_Plan.md  app.py  benchmark_load_times.py  calibrate_constants.py  codex-backend-critiques.md  codex-critiques.md  codex-ui-ux-critiques.md  debug_yahoo.py  load_sample_data.py  plan_1.md  pyproject.toml  railway.api.toml  railway.toml  requirements.txt  start-api.sh  start.sh  trade-analyzer-spec.md
.claude/: launch.json  settings.json
.github/: pull_request_template.md
.streamlit/: config.toml  secrets.toml.example
alembic/: env.py
api/: Dockerfile  admin.py  auth.py  billing_config.py  deps.py  errors.py  gating.py  health.py  idempotency.py  identity.py  main.py  openapi.json  request_context.py  security_headers.py  tenancy.py
brand/: _mockup_myteam.html  colors.json  taglines.md
docs/: 2026-04-08-heater-postmortem.md  2026-05-17-deep-audit-punchlist.md  2026-05-20-fa-engine-overhaul-plan.md  2026-05-20-fa-engine-p3.5-plan.md  AUDIT_YDS_INTEGRATION.md  ROADMAP.md  Research.md  VERIFICATION_LOG.md  architecture.md
pages/: 00_Admin_Console.py  10_Category_Tracker.py  10_Punt_Analyzer.py  10_Trade_Finder.py  10_Waiver_Wire.py  11_Matchup_Planner.py  11_Start_Sit.py  11_Trade_Analyzer.py  12_Matchup_Planner.py  12_Playoff_Odds.py  12_Trade_Finder.py  13_Bullpen.py  13_Trade_Values.py  14_Free_Agents.py  14_Punt_Analyzer.py  15_Waiver_Wire.py  15_Weekly_Recap.py  16_Player_Compare.py  17_Leaders.py  18_Trends.py  19_Player_Databank.py  1_My_Team.py  20_Draft_Simulator.py  2_Draft_Simulator.py  2_Line-up_Optimizer.py  2_Mock_Draft.py  2_Player_Databank.py  2_Trade_Analyzer.py  3_Closer_Monitor.py  3_Player_Compare.py  3_Trade_Analyzer.py  4_Free_Agents.py  4_Pitcher_Streaming.py  4_Player_Compare.py  5_Free_Agents.py  5_Line-up_Optimizer.py  5_Lineup.py  5_Lineup_Optimizer.py  5_Matchup_Planner.py  6_League_Standings.py  (+16 more)
scripts/: backfill_player_mlb_ids.py  calibrate_player_model_variance.py  calibrate_repl_baselines.py  calibrate_sigmoid.py  check_muncy.py  (+28 more)
(+1347 files in other folders)
