[project]
name = "fantasy-baseball-draft-tool"
version = "1.0.0"
description = "Live fantasy baseball draft assistant with Monte Carlo simulation and Broadcast Booth UI"
requires-python = ">=3.11"
license = {text = "MIT"}

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
# Start lenient, tighten over time
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "E741",  # ambiguous variable name
    "F841",  # local variable assigned but never used (common in Streamlit)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F401"]  # unused imports OK in tests
"load_sample_data.py" = ["E402"]  # module-level import not at top

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
pythonpath = ["."]
