[project]
name = "fantasy-baseball-draft-tool"
version = "1.0.0"
description = "Live fantasy baseball draft assistant with Monte Carlo simulation and Broadcast Booth UI"
requires-python = ">=3.11"
license = {text = "MIT"}

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
# Start lenient, tighten over time
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "E741",  # ambiguous variable name
    "F841",  # local variable assigned but never used (common in Streamlit)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F401"]  # unused imports OK in tests
"load_sample_data.py" = ["E402"]  # module-level import not at top

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
pythonpath = ["."]
# 2026-05-19: per-test timeout via pytest-timeout. Bounds the cost of any
# single hung test (was: CI shard 1 ran 20+ min before we cancelled).
# Tests that need longer (e.g. backtest replay) can override with the
# `@pytest.mark.timeout(N)` decorator.
timeout = 120
markers = [
    "allow_network: opt a test back into real outbound network (bypasses the conftest network guard)",
]
